@@ -11,6 +11,8 @@ version 0.7.2 (Jan 31, 2009):
 	* Changed automake script to sync with configure script
 	* Both Toolbar button and menu now reads "Notify", earlier it was Notify 
 	  and Notifications.
+	* All characters other than alpha numeric, -, _ and blank space are stripped
+	  on either side of the selection cllipboard text.
 
 version 0.7.1 (Jan 29, 2009):
 	* Fixed Tooltip for Meronyms in relative tabs/trees.
